# adityaCDF

./: cdf.toml  pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: .icapi_extractors.Group.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: .schedules.Schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: .create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: .wf_icapi_data_pipeline.WorkFlow.yaml  .wf_icapi_data_pipeline.WorkFlowVersion.yaml
