[tool.poetry]
name = "adityabootcamp"
version = "0.1.0"
description = "Project for CDF bootcamp"
authors = ["Aditya Kotiyal"]
license = "No License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
cognite-toolkit = "0.6.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
